@@ -19,22 +19,23 @@ namespace dgm
      *  and start calling update, then the image displayed on sprite
      *  will be changed.
      */
-    class Animation
+    class [[nodiscard]] Animation final
     {
     public:
-        /**
-         *  \brief Construct empty animation
-         *
-         *  \warning Default constructor is meant only for cases when you cannot
-         * construct animation immediately and have to postpone it to later
-         * time, but you don't need to use the object in the meantime.
-         */
-        Animation();
+        enum class [[nodiscard]] PlaybackStatus
+        {
+            Playing,
+            Finished
+        };
 
+    public:
         /**
          *  \brief Construct animation object from states and required FPS
+         *
+         *  The states are not copied! They must outlive the animation object.
          */
-        Animation(const AnimationStates& states, int framesPerSecond = 30);
+        Animation(
+            const AnimationStates& states, int framesPerSecond = 30) noexcept;
 
     public:
         /**
@@ -46,7 +47,7 @@ namespace dgm
          * and looping is set to false, then update will return false. Otherwise
          * it returns true.
          */
-        bool update(const dgm::Time& time);
+        PlaybackStatus update(const dgm::Time& time) noexcept;
 
         /**
          *  \brief Set the new animation state
@@ -55,13 +56,23 @@ namespace dgm
          *  frame of the new animation state. If looping is set
          *  to true then animation will start over when it finishes
          *  and \ref update will always return true.
+         *
+         * If getStateName() equals stateName and isLooping() equals looping,
+         * this function does nothing.
+         *
+         * If stateName is not present in states map, the function throws.
          */
-        void setState(const std::string& state, bool looping = false);
+        void setState(const std::string& stateName, bool looping = false);
 
         /**
          *  \brief Set speed of animation in frames per second
          */
-        void setSpeed(unsigned framesPerSecond);
+        void setSpeed(unsigned framesPerSecond) noexcept;
+
+        bool hasClipFinishedPlaying() const noexcept
+        {
+            return currentFrameIndex >= currentState->second.getFrameCount();
+        }
 
         constexpr void setLooping(bool enabled) noexcept
         {
@@ -98,23 +109,18 @@ namespace dgm
         /**
          *  \brief Reset the current state of animation to frame 0
          */
-        void reset() noexcept
+        constexpr void reset() noexcept
         {
             currentFrameIndex = 0;
             elapsedTime = sf::Time::Zero;
         }
 
     private:
-        std::reference_wrapper<const AnimationStates> states;
+        const AnimationStates& states;
+        AnimationStates::const_iterator currentState;
         sf::Time elapsedTime = sf::seconds(0);
         sf::Time timePerFrame = sf::seconds(0);
         std::size_t currentFrameIndex = 0;
-        AnimationStates::const_iterator currentState;
         bool looping = false;
-
-        [[nodiscard]] bool isCurrentStateValid() const noexcept
-        {
-            return currentState != states.get().end();
-        }
     };
 } // namespace dgm
