@@ -1,66 +1,83 @@
 #include <DGM/classes/Animation.hpp>
 #include <DGM/classes/Error.hpp>
 #include <cassert>
+#include <format>
 #include <fstream>
 
 using dgm::Animation;
 using dgm::AnimationStates;
 
-static inline AnimationStates NullStates = {};
+/**
+ *  WARNING: noexcept relies heavily on the fact that sf::Time is just a wrapper
+ *  around std::chrono and that chrono is noexcept.
+ */
 
-bool Animation::update(const dgm::Time& time)
+Animation::PlaybackStatus Animation::update(const dgm::Time& time) noexcept
 {
-    elapsedTime += time.getElapsed();
-    if (elapsedTime > timePerFrame)
-    {
-        elapsedTime -= timePerFrame;
+    static_assert(noexcept(time.getElapsed()));
+    static_assert(noexcept(hasClipFinishedPlaying()));
+    static_assert(noexcept(isLooping()));
+    static_assert(noexcept(currentState->second.getFrameCount()));
 
-        currentFrameIndex++;
-        if (currentFrameIndex == currentState->second.getFrameCount())
-        {
-            currentFrameIndex = 0;
-            if (not isLooping())
-            {
-                return false;
-            }
-        }
+    if (hasClipFinishedPlaying())
+    {
+        return PlaybackStatus::Finished;
     }
 
-    return true;
+    elapsedTime += time.getElapsed();
+    currentFrameIndex = static_cast<unsigned>(elapsedTime / timePerFrame);
+
+    if (hasClipFinishedPlaying())
+    {
+        if (not isLooping())
+        {
+            return PlaybackStatus::Finished;
+        }
+
+        currentFrameIndex = 0;
+
+        auto allFramesLength =
+            timePerFrame
+            * static_cast<float>(currentState->second.getFrameCount());
+
+        while (elapsedTime > allFramesLength)
+            elapsedTime -= allFramesLength;
+    }
+
+    return PlaybackStatus::Playing;
 }
 
-void Animation::setState(const std::string& state, bool shouldLoop)
+void Animation::setState(const std::string& stateName, bool shouldLoop)
 {
-    if (isCurrentStateValid() && currentState->first == state) return;
+    if (getStateName() == stateName && isLooping() == shouldLoop) return;
 
-    auto newState = states.get().find(state);
-    if (newState == states.get().end())
+    auto newState = states.find(stateName);
+    if (newState == states.end())
     {
-        throw dgm::Exception("Cannot find animation state '" + state + "'");
+        throw dgm::Exception(
+            std::format("Cannot find animation state '{}'", stateName));
     }
 
     currentState = newState;
     setLooping(shouldLoop);
-
     reset();
 }
 
-void Animation::setSpeed(unsigned framesPerSecond)
+void Animation::setSpeed(unsigned framesPerSecond) noexcept
 {
+    static_assert(noexcept(std::round(0.f)));
+
     assert(framesPerSecond > 0);
-    timePerFrame = sf::milliseconds(std::round(1000.f / framesPerSecond));
+    timePerFrame = sf::milliseconds(
+        static_cast<std::int32_t>(std::round(1000.f / framesPerSecond)));
 }
 
-Animation::Animation() : Animation(NullStates) {}
-
-Animation::Animation(const AnimationStates& inStates, int framesPerSecond)
-    : states(cref(inStates))
+Animation::Animation(
+    const AnimationStates& _states, int framesPerSecond) noexcept
+    : states(_states), currentState(states.begin())
 {
-    elapsedTime = sf::seconds(0);
+    static_assert(noexcept(states.begin()));
+    static_assert(noexcept(setSpeed(framesPerSecond)));
 
     setSpeed(framesPerSecond);
-    currentFrameIndex = 0;
-    currentState = states.get().begin();
-
-    setLooping(false);
 }
