@@ -33,6 +33,7 @@ dgm-lib v3.0.0
 	* `dgm::Math::getSize` removed, replaced by `sf::Vector2::length`
 	* `dgm::Math::polarToCartesian` removed, replaced by `sf::Vector2` constructor accepting length and angle
     * Added example for `dgm::NavMesh` called `example-08-pathfinding`
+    * Default constructor of `dgm::Animation` was removed
 
 dgm-lib v2.5.0
  * Added `dgm::Error` for having an error type for `std::expected` with built-in stacktrace
